脚手架第一个版本：粉色系主题